--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                           id="viewer"
                           alt="Point Cloud Model"
                           src="static/model/submeeting_view.glb"
-                          style="width: 300%; height: 300px; background-color: #404040"
+                          style="width: 100%; height: 100px; background-color: #404040"
                           exposure="0.8"
                           camera-orbit="0deg 180deg 40%"
                           auto-rotate
@@ -243,10 +243,10 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{gunes2025fiord,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+  author    = {Gunes, Ulas and Turkulainen, Matias and Ren, Xuqian and Solin, Arno and Kannala, Juho and Rahtu, Esa},
+  title     = {FIORD: A Fisheye Indoor-Outdoor Dataset with LIDAR Ground Truth for 3D Scene Reconstruction and Benchmarking},
+  journal   = {},
+  year      = {2025},
 }</code></pre>
   </div>
 </section>
