--- a/index.html
+++ b/index.html
@@ -144,26 +144,84 @@
   </div>
 </section>
 
-<section id="dataset-overview" class="section">
+<section id="scene-thumbnails" class="section">
   <div class="container">
-    <h2 class="title">Dataset Overview</h2>
-    
-    <figure class="image is-3by2">
-      <img src="./static/images/dataset_overview.jpg" alt="Overview of dataset environments">
-    </figure>
+    <h2 class="title has-text-centered">Scene Thumbnails</h2>
 
-    <p>
-      Our dataset contains still fisheye images of 5 indoor and 5 outdoor environments, captured using an Insta360 RS-One Inch camera. Each scene includes both sparse point clouds (via Structure-from-Motion) and dense LIDAR scans.
-    </p>
+    <!-- Row 1 -->
+    <div class="columns is-multiline is-centered">
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/festia_ic.jpg" alt="Hall In">
+          <figcaption class="has-text-centered">Hall_In</figcaption>
+        </figure>
+      </div>
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/kitchen.jpg" alt="Kitchen In">
+          <figcaption class="has-text-centered">Kitchen_In</figcaption>
+        </figure>
+      </div>
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/meetingroom.jpg" alt="Meeting Room In">
+          <figcaption class="has-text-centered">MeetingRoom_In</figcaption>
+        </figure>
+      </div>
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/upstairs_new.jpg" alt="Upstairs In">
+          <figcaption class="has-text-centered">Upstairs_In</figcaption>
+        </figure>
+      </div>
+    </div>
 
-    <!-- NEW IMAGE PREVIEW -->
-    <figure class="image is-3by2" style="margin-top: 2rem;">
-      <img src="./static/images/pointcloud_preview.jpg" alt="Point cloud preview">
-      <figcaption class="has-text-centered">Example point cloud visualizations from our dataset</figcaption>
-    </figure>
-    
+    <!-- Row 2 -->
+    <div class="columns is-multiline is-centered">
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/parakennus_new.jpg" alt="Building In">
+          <figcaption class="has-text-centered">Building_In</figcaption>
+        </figure>
+      </div>
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/parakennus_on.jpg" alt="Building Out">
+          <figcaption class="has-text-centered">Building_Out</figcaption>
+        </figure>
+      </div>
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/festia_out.jpg" alt="Corridor Out">
+          <figcaption class="has-text-centered">Corridor_Out</figcaption>
+        </figure>
+      </div>
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/outcorridor.jpg" alt="Bridge Out">
+          <figcaption class="has-text-centered">Bridge_Out</figcaption>
+        </figure>
+      </div>
+    </div>
+
+    <!-- Row 3 -->
+    <div class="columns is-centered">
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/konetalo.jpg" alt="Road Out">
+          <figcaption class="has-text-centered">Road_Out</figcaption>
+        </figure>
+      </div>
+      <div class="column is-one-quarter">
+        <figure class="image is-4by3">
+          <img src="./static/images/square.jpg" alt="Night Out">
+          <figcaption class="has-text-centered">Night_Out</figcaption>
+        </figure>
+      </div>
+    </div>
   </div>
 </section>
+
 
 
 
