--- a/index.html
+++ b/index.html
@@ -222,6 +222,50 @@
   </div>
 </section>
 
+<section id="dataset-overview" class="section">
+  <div class="container">
+    <h2 class="title">Dataset Overview</h2>
+
+    <figure class="image">
+      <img src="./static/images/dataset_overview.jpg" alt="Overview of dataset environments">
+    </figure>
+
+    <p>
+      Our dataset contains still fisheye images of 5 indoor and 5 outdoor environments, captured by an Insta360 RS-One Inch camera mounted on a tripod. Additionally, the dataset includes two types of point clouds for
+      each scene: the sparse point cloud generated via Structure-from-Motion (SfM) and the dense point cloud captured with a Faro LIDAR scanner.
+    </p>
+
+    <p class="spaced">
+      The dataset structure is as follows:
+    </p>
+
+    <div>
+      <button class="bibtex btn btn-sm z-depth-0" onclick="toggleCode()" style="font-size: 16px; padding: 10px 18px; cursor: pointer; border: 1px solid gray;">
+        Show Dataset Structure
+      </button>
+    </div>
+
+    <div class="bibtex-code hidden">
+      <pre><code class="has-line-data" data-line-start="1" data-line-end="20">&lt;scene_name&gt;
+  ├── rawimages/                         <span style="color: darkgreen; font-style: italic;"># Original fisheye images in stitched form (.insp format)</span>
+  ├── jpegimages/                        <span style="color: darkgreen; font-style: italic;"># Converted images in JPEG format</span>
+  ├── images/                    <span style="color: darkgreen; font-style: italic;"># Split (single fisheye) images, used for COLMAP based SfM</span>
+  │   ├── cam1              <span style="color: darkgreen; font-style: italic;"># Images from the first fisheye</span>
+  │   └── cam2              <span style="color: darkgreen; font-style: italic;"># Images from the second fisheye</span>
+  ├── insp_to_png.sh     <span style="color: darkgreen; font-style: italic;"># Script to convert .insp files to .png, can be modified for quality or image rotation</span>
+  ├── colmap/                      <span style="color: darkgreen; font-style: italic;"># COLMAP SfM workspace</span>
+  │   ├── database.db              <span style="color: darkgreen; font-style: italic;"># COLMAP database file</span>
+  │   ├── model/
+  │       ├── sparse/                  <span style="color: darkgreen; font-style: italic;"># Sparse model from COLMAP, created with fisheye images</span>
+  │            └──0/
+  │               ├── cameras.bin              <span style="color: darkgreen; font-style: italic;"># COLMAP database file</span>
+  │               ├── images.bin              <span style="color: darkgreen; font-style: italic;"># COLMAP database file</span>
+  │               ├── points3D.bin              <span style="color: darkgreen; font-style: italic;"># COLMAP database file</span>
+  ├── undistorted_model/             <span style="color: darkgreen; font-style: italic;"># COLMAP-based SfM files for the undistorted perspective images</span>
+</code></pre>
+    </div>
+  </div>
+</section>
 
 
 
