--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 <!-- CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+<style>
+  .hidden {
+      display: none;
+  }
+</style>
+  
 <!-- JS (确保先加载了jQuery，因为Bootstrap的JS依赖于jQuery) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -40,10 +45,26 @@
 
 <link rel="stylesheet" href="https://cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
 <script src="https://cdn.knightlab.com/libs/juxtapose/latest/js/juxtapose.min.js"></script>
-
-  
 </head>
 <body>
+
+  <script>
+  function toggleCode() {
+    var codeBlock = document.querySelector('.bibtex-code');
+    if (codeBlock.style.display === "none" || codeBlock.style.display === "") {
+      codeBlock.style.display = "block";
+    } else {
+      codeBlock.style.display = "none";
+    }
+  }
+</script>
+
+<script>
+  window.onload = function () {
+    juxtapose.scanPage();
+  };
+</script>
+
 
 <section class="hero">
   <div class="hero-body">
@@ -241,7 +262,7 @@
 
     <div>
       <button class="bibtex btn btn-sm z-depth-0" onclick="toggleCode()" style="font-size: 16px; padding: 10px 18px; cursor: pointer; border: 1px solid gray;">
-        Show Dataset Structure
+        Dataset Structure
       </button>
     </div>
 
@@ -253,14 +274,14 @@
   │   ├── cam1              <span style="color: darkgreen; font-style: italic;"># Images from the first fisheye</span>
   │   └── cam2              <span style="color: darkgreen; font-style: italic;"># Images from the second fisheye</span>
   ├── insp_to_png.sh     <span style="color: darkgreen; font-style: italic;"># Script to convert .insp files to .png, can be modified for quality or image rotation</span>
-  ├── colmap/                      <span style="color: darkgreen; font-style: italic;"># COLMAP SfM workspace</span>
+  ├── colmap/                     
   │   ├── database.db              <span style="color: darkgreen; font-style: italic;"># COLMAP database file</span>
   │   ├── model/
   │       ├── sparse/                  <span style="color: darkgreen; font-style: italic;"># Sparse model from COLMAP, created with fisheye images</span>
   │            └──0/
-  │               ├── cameras.bin              <span style="color: darkgreen; font-style: italic;"># COLMAP database file</span>
-  │               ├── images.bin              <span style="color: darkgreen; font-style: italic;"># COLMAP database file</span>
-  │               ├── points3D.bin              <span style="color: darkgreen; font-style: italic;"># COLMAP database file</span>
+  │               ├── cameras.bin           
+  │               ├── images.bin             
+  │               ├── points3D.bin            
   ├── undistorted_model/             <span style="color: darkgreen; font-style: italic;"># COLMAP-based SfM files for the undistorted perspective images</span>
 </code></pre>
     </div>
