--- a/index.html
+++ b/index.html
@@ -48,10 +48,14 @@
 </head>
 <body>
 
-<script>
+  <script>
   function toggleCode() {
     var codeBlock = document.querySelector('.bibtex-code');
-    codeBlock.classList.toggle('hidden');
+    if (codeBlock.style.display === "none" || codeBlock.style.display === "") {
+      codeBlock.style.display = "block";
+    } else {
+      codeBlock.style.display = "none";
+    }
   }
 </script>
 
