--- a/index.html
+++ b/index.html
@@ -246,14 +246,9 @@
 <section id="dataset-overview" class="section">
   <div class="container">
     <h2 class="title">Dataset Overview</h2>
-
-    <figure class="image">
-      <img src="./static/images/dataset_overview.jpg">
-    </figure>
-
     <p>
-      Our dataset contains still fisheye images of 5 indoor and 5 outdoor environments, captured by an Insta360 RS-One Inch camera mounted on a tripod. Additionally, the dataset includes two types of point clouds for
-      each scene: the sparse point cloud generated via Structure-from-Motion (SfM) and the dense point cloud captured with a Faro LIDAR scanner.
+      Our dataset contains still fisheye images of 5 indoor and 5 outdoor environments, captured by an Insta360 RS-One Inch camera mounted on a tripod. Sample images from the types of scenes available can be seen above. You can also get an idea about the dimensions of the scenes from our paper.
+      The dataset also includes two types of point clouds for each scene: the sparse point cloud generated via Structure-from-Motion (SfM) and the dense point cloud captured with a Faro LIDAR scanner.
     </p>
 
     <p class="spaced">
