Add arxiv links

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2504.01732"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -122,7 +122,7 @@
             -->
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://zenodo.org/communities/fiord"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
