--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <a href="https://users.aalto.fi/~asolin/">Arno Solin</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://users.aalto.fi/~kannalj1/">Juho Kannala</a><sup>2</sup>,
+              <a href="https://users.aalto.fi/~kannalj1/">Juho Kannala</a><sup>2,3</sup>,
             </span>
             <span class="author-block">
               <a href="https://esa.rahtu.fi/">Esa Rahtu</a><sup>1</sup>,
@@ -94,6 +94,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Tampere University</span>
             <span class="author-block"><sup>2</sup>Aalto University</span>
+            <span class="author-block"><sup>3</sup>University of Oulu</span>
           </div>
 
           <div class="column has-text-centered">
